Fix spacing

--- a/src/assets/_base.scss
+++ b/src/assets/_base.scss
@@ -192,9 +192,9 @@ menu, ul {
 }
 
 menu, ul, ol {
-    padding-inline-start: 3ch ;
+    padding-inline-start: 4ch ;
 }
-$list-width: $width - 3ch ;
+$list-width: $width - 4ch ;
 li {
     inline-size: $list-width ;
     max-inline-size: 100% ;
